--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://192.168.1.12:3306/tongji?useUnicode=true&characterEncoding=utf8&autoReconnect=true&rewriteBatchedStatements=TRUE
 spring.datasource.username=root
 spring.datasource.password=654321
-
+server.port = 8100
 management.port=54001 
