--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,16 @@
 			<artifactId>poi</artifactId>
 			<version>3.16</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sourceforge.javacsv</groupId>
+			<artifactId>javacsv</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
