--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,18 @@ spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.druid.filters=stat,wall
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 spring.datasource.druid.connectionInitSqls=set names utf8mb4;
+#mybatis
+#entity扫描的包名
+mybatis.type-aliases-package=com.snjtjj.entity
+#Mapper.xml所在的位置
+mybatis.mapper-locations=classpath*:/mapper/**.xml
+
+#pagehelper分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
 server.port = 8100
 management.port=54001 
 logging.level.com.snjtjj.mapper=TRACE
