--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 			<version>3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
