--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://192.168.1.12:3306/tongji
+spring.datasource.url=jdbc:mysql://119.29.239.81:9306/tongjj
 spring.datasource.username=root
-spring.datasource.password=654321
+spring.datasource.password=1q2w3e.
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initialSize=5
@@ -18,18 +18,12 @@ spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.druid.filters=stat,wall
 spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 spring.datasource.druid.connectionInitSqls=set names utf8mb4;
-#mybatis
-#entity扫描的包名
 mybatis.type-aliases-package=com.snjtjj.entity
-#Mapper.xml所在的位置
 mybatis.mapper-locations=classpath*:/mapper/**.xml
-
-#pagehelper分页插件配置
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-
 server.port = 8100
 management.port=54001 
 logging.level.com.snjtjj.mapper=TRACE
