1.调查对象管理 2.接口全部加上api

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ jwt:
   expiration: 604800
   route:
     authentication:
-      path: auth
-      refresh: refresh
+      path: api/auth
+      refresh: api/refresh
 
 #logging:
 #  level:
