调查对象管理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,4 @@ logging.level.com.snjtjj.mapper=TRACE
 upload.img.path=/user/dowload/upload/img
 multipart.maxFileSize=50Mb
 multipart.maxRequestSize=50Mb
+spring.aop.auto=true
