--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ upload.img.path=/user/dowload/upload/img
 multipart.maxFileSize=50Mb
 multipart.maxRequestSize=50Mb
 spring.aop.auto=true
+spring.jackson.time-zone=GMT+8
