增加表单保存相关代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,8 @@ pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 server.port = 8100
 management.port=54001 
-logging.level.com.snjtjj.mapper=TRACE
+#logging.level.com.snjtjj.mapper=TRACE
+logging.level.com.snjtjj.mapper=DEBUG
 upload.img.path=/user/dowload/upload/img
 multipart.maxFileSize=50Mb
 multipart.maxRequestSize=50Mb
