--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://119.29.239.81:9306/tongjj
+spring.datasource.url=jdbc:mysql://122.14.199.133:3306/tongjj
 spring.datasource.username=root
-spring.datasource.password=1q2w3e.
+spring.datasource.password=506fd35c59
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.initialSize=5
