--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,11 @@ multipart.maxFileSize=50Mb
 multipart.maxRequestSize=50Mb
 spring.aop.auto=true
 spring.jackson.time-zone=GMT+8
+#spring cache配置
+spring.cache.type=ehcache
+
+#jwt配置
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=auth
+jwt.route.authentication.refresh=refresh
