--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,5 +39,5 @@ spring.cache.type=ehcache
 #jwt配置
 jwt.secret=mySecret
 jwt.expiration=604800
-jwt.route.authentication.path=auth
-jwt.route.authentication.refresh=refresh
+jwt.route.authentication.path=api/auth
+jwt.route.authentication.refresh=api/refresh
